--- a/app/client/stylesheets/style.css
+++ b/app/client/stylesheets/style.css
@@ -1,3 +1,14 @@
 body {
-  padding-top: 70px;  /* Move body of page below navbar. */
+  padding-top : 70px;
+
+}
+
+.page-content {
+  padding : 10px;
+  text-align : center;
+}
+
+.img {
+  float : left;
+  margin-right : 10px;
 }
