--- a/app/client/templates/application/Header.html
+++ b/app/client/templates/application/Header.html
@@ -7,14 +7,14 @@
           <!--  Display three horizontal lines when navbar collapsed. -->
           <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">A History of Browser</a>
+        <a class="navbar-brand" href="{{ pathFor 'Home'}}">A History of Browser</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#Intro">Introduction</a></li>
-          <li><a href="#IE">Internet Explorer</a></li>
-          <li><a href="#FireFox">FireFox</a></li>
-          <li><a href="#Chrome">Chrome</a></li>
+          <li><a href="{{ pathFor 'Home'}}">Introduction</a></li>
+          <li><a href="{{ pathFor 'InternetExplorer'}}">Internet Explorer</a></li>
+          <li><a href="{{pathFor 'FireFox'}}">FireFox</a></li>
+          <li><a href="{{ pathFor 'Chrome'}}">Chrome</a></li>
         </ul>
       </div>
     </div>
